[gd_scene load_steps=7 format=2]

[ext_resource path="res://emmasophia.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://pause menu.gd" type="Script" id=2]
[ext_resource path="res://SettingsMenu.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
extra_spacing_top = 38
extra_spacing_bottom = 7
extra_spacing_char = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 55
extra_spacing_top = 37
extra_spacing_bottom = 8
extra_spacing_char = 4
font_data = ExtResource( 1 )

[node name="pause menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0352941, 0.0352941, 0.815686 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 591.0
margin_top = 208.0
margin_right = 1329.0
margin_bottom = 871.0
custom_constants/separation = 60

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 738.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 738.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 10 )

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 738.0
margin_bottom = 317.0
custom_fonts/font = SubResource( 2 )
text = "Resume game"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 377.0
margin_right = 738.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 550.0
margin_right = 738.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 3 )
text = "settings"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
